Update step by step

--- a/hexlet_django_blog/templates/base.html
+++ b/hexlet_django_blog/templates/base.html
@@ -15,7 +15,7 @@
     {% endblock %}
 </div>
 <div id="content">
-    {% block content %}{% endblock %}
+    {% block content %}Hello, {{who}}{% endblock %}
 </div>
 </body>
 </html>
